<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/action_add"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true"
        android:checkable="false" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_input_delete"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/action_email"
        app:showAsAction="never"
        android:visible="true"
        android:enabled="true" />
    <item
        android:id="@+id/action_SMS"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_SMS"
        app:showAsAction="never"
        android:visible="true"
        android:enabled="true" />
</menu>
